attempt to fix border radius issue on mobile

--- a/src/assets/Styles/workitem.scss
+++ b/src/assets/Styles/workitem.scss
@@ -140,4 +140,10 @@
 
 .comingsoon{
     pointer-events: none;
+    &:hover{
+        pointer-events: none;
+        img{
+            border-radius:32px;
+        }
+    }
 }
